Update redirect URL in contact form

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <input
           type="hidden"
           name="_next"
-          value="https://yourdomain.com/contact.html"
+          value="https://muneebakram-git.github.io/contact-form/"
         />
 
         <div class="row">
