--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
       <form
         id="contactForm"
-        action="https://formsubmit.co/binyameen@eraviyasolutions.com"
+        action="https://formsubmit.co/devteam@autogentive.com"
         method="POST"
       >
         <!-- Hidden fields for FormSubmit configuration -->
